Adición botón Preorden en vista ABB

--- a/web/abb.xhtml
+++ b/web/abb.xhtml
@@ -20,6 +20,7 @@
                                  update="@all" />
                 <p:commandButton value="InOrden" action="#{arbolBinarioControlador.habilitarInOrden()}" update="@all" ajax="false"/>
 
+                <p:commandButton value="Preorden"/>
 
 
             </p:panel>
